Add: post_add router
