# swagger/swagger-output.json
@@ -202,6 +202,40 @@
             "description": "OK"
           }
         }
+      },
+      "post": {
+        "tags": [
+          "Calc"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "num1": {
+                  "example": "any"
+                },
+                "num2": {
+                  "example": "any"
+                },
+                "num3": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
       }
     }
   },
